# jiraMicroLabAutomation

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_COMPLETE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_check.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_revision_tracking.py
backend/api/: __init__.py  config.py  dependencies.py  main.py
backend/api/auth/: __init__.py  models.py  router.py  schemas.py  security.py  service.py
backend/api/db/: __init__.py  database.py
backend/api/feedback/: __init__.py  models.py  router.py  schemas.py
backend/api/issues/: __init__.py  router.py  schemas.py  service.py
backend/api/rubrics/: __init__.py  models.py  router.py  schemas.py
backend/api/telegram/: __init__.py  bot.py  router.py  service.py
backend/api/websocket/: __init__.py  events.py  manager.py  router.py
backend/src/: cache.py  exceptions.py  feedback_writer.py  pipeline.py  rubric.py
backend/tests/: test_config.py  test_exceptions.py  test_feedback_writer.py  test_jira_client.py
frontend/: Dockerfile  next.config.mjs  package.json
frontend/src/: middleware.ts
frontend/src/app/(main)/auth/_components/: login-form.tsx  register-form.tsx
frontend/src/app/(main)/auth/_components/social-auth/: google-button.tsx
frontend/src/app/(main)/auth/v1/login/: page.tsx
frontend/src/app/(main)/auth/v1/register/: page.tsx
frontend/src/app/(main)/auth/v2/login/: page.tsx
frontend/src/app/(main)/dashboard/: layout.tsx
frontend/src/app/(main)/dashboard/_components/sidebar/: account-switcher.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx
frontend/src/app/(main)/dashboard/analytics/: page.tsx
frontend/src/app/(main)/dashboard/issues/: page.tsx
frontend/src/app/(main)/dashboard/issues/[key]/: page.tsx
frontend/src/app/(main)/dashboard/issues/_components/: bulk-actions.tsx  issue-filters.tsx  issues-table.tsx
frontend/src/app/(main)/dashboard/monitor/: page.tsx
frontend/src/app/(main)/dashboard/overview/: page.tsx
frontend/src/app/(main)/dashboard/overview/_components/: activity-feed.tsx  (+3 more)
frontend/src/app/(main)/dashboard/rubric/: page.tsx
frontend/src/app/(main)/dashboard/settings/: page.tsx
frontend/src/app/(main)/dashboard/skills/: page.tsx
frontend/src/app/(main)/dashboard/students/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/config/: app-config.ts
frontend/src/lib/: websocket.ts
frontend/src/lib/api/: client.ts  feedback-api.ts
frontend/src/navigation/sidebar/: sidebar-items.ts
frontend/src/stores/user/: user-provider.tsx  user-store.ts
frontend/src/types/: feedback.ts
src/: __init__.py  app.py  cache.py  config.py  feedback_writer.py  jira_client.py  logging_config.py  pipeline.py  rubric.py  signatures.py
tests/: __init__.py  conftest.py  test_cache.py  test_feedback_writer.py  test_pipeline.py  test_rubric.py
(+8 files in other folders)
